# fastapi

./: .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_04_06_1353-c9d7658c7f02_initial_migration.py
scripts/: entrypoint.sh  seed.py
src/: container.py  main.py  settings.py
src/api/: health.py
src/api/routes/v1/: posts.py  users.py
src/api/schemas/: base.py  responses.py
src/config/: error_middleware.py  logging_config.py
src/exceptions/: custom_exception_handlers.py  custom_exceptions.py
src/models/: __init__.py  comment.py  enums.py  post.py  post_tag_association.py  tag.py  user.py
src/repository/: base.py  db_manager.py
src/services/: post.py  query.py
tests/: conftest.py
tests/integration/: test_health.py
tests/integration/api/: test_health.py
tests/integration/api/v1/: test_posts.py  test_users.py
tests/integration/repository/: test_base.py
tests/unit/api/schemas/: test_base.py
tests/utils/: asserts.py
