[tool.poetry]
name = "FastAPI+SQLAlchemy+Pydantic"
version = "0.1.0"
description = "Project demoing the use of FastAPI with SQLAlchemy and Pydantic"
authors = ["Jelena Cupac"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[tool.mypy]
explicit_package_bases = true
ignore_missing_imports = true
implicit_optional = true
allow_redefinition = true

[tool.ruff]
line-length = 119

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
