[tool.poetry]
name = "FastAPI+SQLAlchemy+Pydantic"
version = "0.1.0"
description = "Project demoing the use of FastAPI with SQLAlchemy and Pydantic"
authors = ["Jelena Cupac"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
python-json-logger = "^3.3.0"
httpx = "^0.28.1"
dotenv = "^0.9.9"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
pytest-asyncio = "^0.26.0"

[tool.mypy]
explicit_package_bases = true
ignore_missing_imports = true
implicit_optional = true
allow_redefinition = true

[tool.ruff]
line-length = 119

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--cov=src",
    "--cov-report=html"
]

markers = [
    "integration: mark a test as an integration test",
]
testpaths = [ "tests" ]

[tool.coverage.html]
directory = "coverage_html_report"

[tool.coverage.report]
fail_under = 80
exclude_also = [
    "pass"
]

